k8s/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-service
  namespace : portal
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: portal
  type: ClusterIP
